feat: changes
remove users -> add logic to sso

Add producer kafka
